<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/browseFragment"
        android:icon="@drawable/ic_nav_browse"
        android:title="@string/nav_browse" />
    <item
        android:id="@+id/placeholder"
        android:icon="@drawable/ic_blank"
        android:title=""
        android:enabled="false" />
    <item
        android:id="@+id/quizFragment"
        android:icon="@drawable/ic_nav_quiz"
        android:title="@string/nav_quizzes" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />
</menu>
